[package]
name = "tree-sitter-move"
description = "Move grammar for tree-sitter"
version = "0.1.0"
authors = ["Angelo <12701614+0xangelo@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "move"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/0xangelo/tree-sitter-move"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
